# Django_mini4

./: .gitignore  .gitmessage.txt  README.md  celery.py  pyproject.toml  vvd-test.py
.github/workflows/: ci.yml
accounts/: models.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
analysis/: analyzer.py  apps.py  models.py  serializer.py  signals.py  tasks.py  tests.py  urls.py  views.py
analysis/migrations/: 0001_initial.py  0002_alter_analysis_result_image.py
api/: apps.py  urls.py  views.py
config/settings/: __init__.py  base.py  development.py  production.py  test.py
config/urls/: base.py  development.py  production.py
core/management/commands/: wait_for_db.py
notification/: models.py  tests.py  urls.py  views.py
notification/migrations/: 0001_initial.py
transaction_history/: models.py  serializers.py  tests.py  urls.py  views.py
transaction_history/migrations/: 0001_initial.py  0002_alter_transactionhistory_options_and_more.py  0003_transactionhistory_created_at.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_groups_user_is_superuser_user_user_permissions.py
users/templates/: register_user.html
users/tests/: test_models.py  test_user_api.py
